tests/valid/trait/method_call_short_ufcs_local_mutable_inferred_pure_receiver_unit.facet
trait Runner {
  fn run(self: Self) -> unrestricted ();
}

impl Runner for unrestricted () {
  fn run(self: Self) -> unrestricted () {
    self
  }
}

fn main() -> unrestricted () {
  let mut x = ();
  (Runner::run x)
}
