tests/invalid/trait/impl_method_extra.facet
trait Marker {}

struct Job {
  value: unrestricted isize
}

impl Marker for unrestricted Job {
  fn run(self: &mut Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  ()
}
